@startuml
hide circle

entity User {
    * id
    **email**
    password
    firstname
    lastname
    username
    birth_date [0..1]
    phone_number [0..1]
    city
    postal_code
    street
    house_number
}

entity Category {
    * id
    label
    description
}

entity Product  {
    * id
    currentPrice
}

entity Order {
    *id
    date
}

entity OrderProduct {
    *id
    quantity
    accordedPrice
}

entity Translation {
    label
    description
    ---
    id(Translation) : Language, Product
}

entity Language {
    *id
    internationalCode
}

entity Promotion {
    *id
    start_date
    end_date
    percentage
}

Order ||-right-o{ OrderProduct : Content
User ||-right-o{ Order : Ordering
Category ||-up-o{ Product : Belong
OrderProduct }o--|| Product : Belong

Category }o--o| Promotion : Promotion

Product ||-left-o{ Translation : TransletedProduct
Translation }o-left-|| Language : TargetLanguage
@enduml